[gd_scene load_steps=7 format=3 uid="uid://cvacs6r188ggs"]

[ext_resource type="Texture2D" uid="uid://dtkaxg1csqs08" path="res://mainMenu/mainMenuBackground.png" id="1_dn4gi"]
[ext_resource type="Script" path="res://mainMenu/main_menu.gd" id="1_qjubt"]
[ext_resource type="FontFile" uid="uid://l1auh0ybna6x" path="res://mainMenu/upheavtt.ttf" id="2_isrj3"]
[ext_resource type="Texture2D" uid="uid://cdg0sdx5st4ku" path="res://UI/buttonRegular.png" id="4_nuhwp"]
[ext_resource type="Texture2D" uid="uid://cxg0m5uifvid8" path="res://UI/buttonPressed.png" id="5_8qmge"]
[ext_resource type="PackedScene" uid="uid://gxavw04jr055" path="res://scenes/options_menu.tscn" id="6_au7vy"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjubt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -626.0
offset_top = -501.0
offset_right = 696.0
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dn4gi")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 170

[node name="gameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.603922, 0.341176, 0.239216, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_isrj3")
theme_override_font_sizes/font_size = 80
text = "EMERALD ISLE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="start_button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_nuhwp")
texture_pressed = ExtResource("5_8qmge")

[node name="new_game" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/start_button"]
layout_mode = 0
offset_left = 47.0
offset_top = 9.0
offset_right = 197.0
offset_bottom = 38.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.45098)
theme_override_fonts/font = ExtResource("2_isrj3")
theme_override_font_sizes/font_size = 32
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="load_button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_nuhwp")
texture_pressed = ExtResource("5_8qmge")

[node name="load" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/load_button"]
layout_mode = 0
offset_left = 34.0
offset_top = 9.0
offset_right = 200.0
offset_bottom = 38.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.45098)
theme_override_fonts/font = ExtResource("2_isrj3")
theme_override_font_sizes/font_size = 32
text = "load game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="options_button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_nuhwp")
texture_pressed = ExtResource("5_8qmge")

[node name="options" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/options_button"]
layout_mode = 0
offset_left = 34.0
offset_top = 9.0
offset_right = 200.0
offset_bottom = 38.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.45098)
theme_override_fonts/font = ExtResource("2_isrj3")
theme_override_font_sizes/font_size = 32
text = "options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="exit_button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_nuhwp")
texture_pressed = ExtResource("5_8qmge")

[node name="exit" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/exit_button"]
layout_mode = 0
offset_left = 34.0
offset_top = 9.0
offset_right = 200.0
offset_bottom = 38.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.45098)
theme_override_fonts/font = ExtResource("2_isrj3")
theme_override_font_sizes/font_size = 32
text = "EXIT
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="options_menu" parent="." instance=ExtResource("6_au7vy")]
visible = false
layout_mode = 1
